[tool.poetry]
name = "poetry-example"
version = "1.0.0"
description = "Example of project managed via Poetry"
authors = ["Rafael Laboissière <rafael@laboissiere.net>"]
license = "GLP-3+"
readme = "README.md"
packages = [
    { include = "poetryex" },
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
